objects/Competitor__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <label>Vendor Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gearset</fullName>
                </value>
                <value>
                    <fullName>AutoRabit</fullName>
                </value>
                <value>
                    <fullName>Flosum</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Copado</fullName>
                </value>
                <value>
                    <fullName>Blue Canvas</fullName>
                </value>
                <value>
                    <fullName>Build vs. Buy</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                    <isActive>false</isActive>
                    <label>Custom</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gearset</fullName>
                </value>
                <value>
                    <fullName>AutoRabit</fullName>
                </value>
                <value>
                    <fullName>Flosum</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>GitLab</fullName>
                    <isActive>false</isActive>
                    <label>GitLab</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position_of_Strength__c</fullName>
        <label>Position of Strength</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Current Vendor</fullName>
                    <isActive>false</isActive>
                    <label>Current Vendor</label>
                </value>
                <value>
                    <fullName>Lost</fullName>
                    <isActive>false</isActive>
                    <label>Lost</label>
                </value>
                <value>
                    <fullName>Won</fullName>
                    <isActive>false</isActive>
                    <label>Won</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <inlineHelpText>Enter details as to what strengths this competitor has relevant to this opportunity</inlineHelpText>
        <label>Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <inlineHelpText>Enter in details as to what weaknesses this competitor has relevant to this opportunity</inlineHelpText>
        <label>Weaknesses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Won_deal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if this competitor won deal</inlineHelpText>
        <label>Won deal</label>
        <type>Checkbox</type>
    </fields>
    <label>Competitor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Competitor_Name__c</columns>
        <columns>Current_Vendor__c</columns>
        <columns>Position_of_Strength__c</columns>
        <columns>Won_deal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}-CMP</displayFormat>
        <label>RecordID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>